src/bash/snapshots/hook_rs__bash__bash_parser__tests__assignment_word_in_prefix_multiple.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: FOO=1 BAR=2 command
children:
  - children:
      - name: command
        env_vars:
          - - FOO
            - "1"
          - - BAR
            - "2"
