src/bash/snapshots/hook_rs__bash__bash_parser__tests__assignment_word_in_suffix.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "gh api graphql -f query='{ viewer { login } }'"
children:
  - children:
      - name: gh
        args:
          - api
          - graphql
          - "-f"
          - "query='{ viewer { login } }'"
