src/bash/snapshots/hook_rs__bash__bash_parser__tests__command_sub_heredoc_unbalanced_single_quote.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "echo \"$(cat <<'EOF'\nit's\nEOF\n)\""
children:
  - children:
      - name: echo
        args:
          - "\"$(cat <<'EOF'\nit's\nEOF\n)\""
        contains_substitution: true
      - name: cat
        has_heredoc: true
        nesting:
          - Substitution
