src/bash/snapshots/hook_rs__bash__bash_parser__tests__command_substitution_dollar.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: echo $(whoami)
children:
  - children:
      - name: echo
        args:
          - $(whoami)
        contains_substitution: true
      - name: whoami
        nesting:
          - Substitution
