src/bash/snapshots/hook_rs__bash__bash_parser__tests__for_loop.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: for f in *.tmp; do echo $f; done
children:
  - children:
      - name: echo
        args:
          - $f
        nesting:
          - For
