src/bash/snapshots/hook_rs__bash__bash_parser__tests__heredoc_quoted_tag_in_chained_command.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "git add file.md && git commit -m \"$(cat <<'EOF'\nfeat(scope): Add feature\nEOF\n)\""
children:
  - children:
      - name: git
        args:
          - add
          - file.md
  - connector: And
    children:
      - name: git
        args:
          - commit
          - "-m"
          - "\"$(cat <<'EOF'\nfeat(scope): Add feature\nEOF\n)\""
        contains_substitution: true
      - name: cat
        has_heredoc: true
        nesting:
          - Substitution
