src/bash/snapshots/hook_rs__bash__bash_parser__tests__parameter_expansion_braced.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "echo ${var}"
children:
  - children:
      - name: echo
        args:
          - "${var}"
