src/bash/snapshots/hook_rs__bash__bash_parser__tests__parse_or_chain.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: false || git stash clear
children:
  - children:
      - name: "false"
  - connector: Or
    children:
      - name: git
        args:
          - stash
          - clear
