src/bash/snapshots/hook_rs__bash__bash_parser__tests__redirect_fd_dup.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: cargo test 2>&1
children:
  - children:
      - name: cargo
        args:
          - test
