src/bash/snapshots/hook_rs__bash__bash_parser__tests__semicolon_separated.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: git status ; echo hi
children:
  - children:
      - name: git
        args:
          - status
  - connector: Semi
    children:
      - name: echo
        args:
          - hi
