src/bash/snapshots/hook_rs__bash__bash_parser__tests__single_quoted_substitution_not_expanded.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "echo '$(whoami)'"
children:
  - children:
      - name: echo
        args:
          - "'$(whoami)'"
